Mobile spacing issue fixed

--- a/src/css/Title.css
+++ b/src/css/Title.css
@@ -24,6 +24,7 @@
   height: 10px;
   background: var(--primary-color);
   box-shadow: -3px 4px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
 }
 
 @media (max-width: 700px) {
